3章:kernelで画面描画

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
   build_kernel:
     build: .
     working_dir: /root/mikanos/kernel/
-    command: make
+    command: bash -c "source /root/osbook/devenv/buildenv.sh && make"
     volumes:
       - ./:/root/mikanos/
 
