--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -1,11 +1,20 @@
-all: kernel.elf
+TARGET = kernel.elf
+OBJS = main.o
 
-%.o: %.cpp
-#	clang++ -O2 -Wall -g --target=x86_64-elf -ffreestanding -mno-red-zone -fno-exceptions -fno-rtti -std=c++17 -c $<
-	clang++ -O2 ${CPPFLAGS} --target=x86_64-elf -fno-exceptions -ffreestanding -c $<
+CXXFLAGS += -O2 -Wall -g --target=x86_64-elf -ffreestanding -mno-red-zone \
+            -fno-exceptions -fno-rtti -std=c++17
+LDFLAGS  += --entry KernelMain -z norelro --image-base 0x100000 --static
 
-%.elf: %.o
-	ld.lld ${LDFLAGS} --entry KernelMain -z norelro --image-base 0x100000 --static -o $@ $<
 
+.PHONY: all
+all: $(TARGET)
+
+.PHONY: clean
 clean:
-	rm -f kernel.elf
+	rm -rf *.o
+
+kernel.elf: $(OBJS) Makefile
+	ld.lld $(LDFLAGS) -o kernel.elf $(OBJS)
+
+%.o: %.cpp Makefile
+	clang++ $(CPPFLAGS) $(CXXFLAGS) -c $<
