--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -26,7 +26,7 @@ kernel.elf: $(OBJS) Makefile
 	sed --in-place 's|$(notdir $(OBJ))|$(OBJ)|' $@
 
 hankaku.bin: hankaku.txt
-	../tools/makefont.py -o $@ $<
+	python3 ../tools/makefont.py -o $@ $<
 
 hankaku.o: hankaku.bin
 	objcopy -I binary -O elf64-x86-64 -B i386:x86-64 $< $@
