--- a/rkernel/Cargo.toml
+++ b/rkernel/Cargo.toml
@@ -10,3 +10,5 @@ name = "kernel"
 path = "src/main.rs"
 
 [dependencies]
+lazy_static = {version = "1.4.0", features = ["spin_no_std"]}
+spin = "0.9.2"
